# gnuradio-rocket-tracker

./: .gitignore  CMakeLists.txt  build.sh  db.sql
altus-tracker/: CMakeLists.txt  Dockerfile  altus_channel.cc  altus_channel.h  altus_decoder.cc  altus_decoder.h  altus_decoder_impl.cc  altus_decoder_impl.h  altus_packet.cc  altus_packet.h  build.sh  constants.h  freq_shift.cc  freq_shift.h  freq_shift_impl.cc  freq_shift_impl.h  main.cc  make_channel.cc  make_channel.h  run.sh  source.cc  source.h
altus-tracker/blocks/: altus_channel.cc  altus_channel.h  altus_decoder.h  altus_detector.cc  altus_detector.h  altus_power_level.cc
altus-tracker/source/: altus_packet.cc  constants.h  main.cc
altus-tracker/source/blocks/: altus_channel.cc  altus_decoder.cc  altus_detector.cc  altus_detector.h  altus_power_level.cc  altus_power_level.h
cmake/: FindGnuradioOsmosdr.cmake
db/: 000001_create_packets_table.up.sql  000002_create_devices_table.up.sql  000003_create_sources_table.down.sql  000003_create_sources_table.up.sql  000004_create_channels_table.down.sql  000004_create_channels_table.up.sql  000005_create_device_state_view.up.sql  000006_add_packet_source_column.up.sql  000007_change_channel_table_frequency_type.down.sql  000008_remove_channel_name.up.sql  000009_make_channel_names_table.down.sql  000009_make_channel_names_table.up.sql  000010_fix_source_channels_view.down.sql  000010_fix_source_channels_view.up.sql
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: homePage.tsx  layout.tsx  page.tsx
frontend/types/: Altus.ts  DevicesApi.ts
frontend/utils/: typeFetch.ts
server/: .gitignore  Dockerfile  go.mod  go.sum  main.go
server/db/: 000001_create_packets_table.down.sql  000001_create_packets_table.up.sql  000002_create_devices_table.down.sql  000002_create_devices_table.up.sql  000003_create_sources_table.up.sql  000004_create_channels_table.up.sql  000005_create_device_state_view.down.sql  000005_create_device_state_view.up.sql  000006_add_packet_source_column.down.sql  000007_change_channel_table_frequency_type.up.sql  000008_remove_channel_name.down.sql  000009_make_channel_names_table.up.sql  000011_add_flights_table.down.sql  000011_add_flights_table.up.sql  000012_create_device_state_view.up.sql
server/frontend/: .gitignore  deploy.sh  documentApi.ts  next.config.ts  package-lock.json  package.json
server/frontend/app/: homePage.tsx  layout.tsx  page.tsx  service-worker.js
server/frontend/app/api-doc/: apiDocPage.tsx  page.tsx
server/frontend/app/device/: devicePage.tsx  page.tsx  styles.module.css
server/frontend/types/: Altus.ts  DevicesApi.ts
server/frontend/utils/: device.ts  deviceState.ts  map.tsx  time.ts  ws.ts
server/http/: devices.go  main.go  sockets.go
server/model/: main.go
server/socket/: main.go
